--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                 Use `max-w-full` and `h-auto` for fluid responsiveness.
                 The placeholder image can be replaced with your own image URL.
             -->
-            <img src="https://placehold.co/1280x400/363636/ffffff?text=Your+Banner+Image+Here" 
-                 alt="Placeholder banner image" 
+            <img src="other1.png" 
+                 alt="Otherworld Supply Co." 
                  class="w-full h-auto object-cover rounded-lg">
         </div>
 
@@ -124,17 +124,19 @@
                 </div>
 
                 <div class="relative group cursor-pointer overflow-hidden rounded-md">
-                    <img src="https://placehold.co/400x400/222222/a3e635?text=Product+8" alt="Product 8" class="w-full h-auto transition-transform transform group-hover:scale-105 rounded-md">
-                    <div class="absolute inset-0 bg-black bg-opacity-50 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity">
-                        <span class="text-white text-lg font-bold">View</span>
+                    <img src="https://placehold.co/400x400/222222/a3e635?text=Product+2" alt="Product 2" class="w-full h-auto transition-transform transform group-hover:scale-105 rounded-md" style="filter: brightness(70%) sepia(100%)                     saturate(500%) hue-rotate(-20deg);">
+                    <div class="absolute inset-0 flex items-center justify-center pointer-events-none">
+                    <span class="text-white text-2xl font-bold drop-shadow-lg">SOLD $45.00</span>
                     </div>
                 </div>
+
             </div>
         </main>
 
         <!-- Placeholder for "Links" section -->
         <section id="links" class="py-8 text-center">
             <h2 class="text-3xl md:text-4xl font-bold mb-4">Links</h2>
+            <p class="text-gray-400"><a href="http://www.Facebook.com/OtherWorldSupplyCo">Facebook</a></p>
             <p class="text-gray-400">This section is a placeholder for your important links.</p>
         </section>
 
