--- a/index.html
+++ b/index.html
@@ -110,21 +110,25 @@
                 </div>
 
                 <div class="relative group cursor-pointer overflow-hidden rounded-md">
-                    <img src="https://placehold.co/400x400/222222/a3e635?text=Product+6" alt="Product 6" class="w-full h-auto transition-transform transform group-hover:scale-105 rounded-md">
+                   <a href="https://otherworldsupplyco.printful.me/product/set-of-5-mystic-beat-pin-buttons">
+                    <img src="mysticpins.jpg" alt="" class="w-full h-auto transition-transform transform group-hover:scale-105 rounded-md">
                     <div class="absolute inset-0 bg-black bg-opacity-50 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity">
                         <span class="text-white text-lg font-bold">View</span>
                     </div>
+                   </a>
                 </div>
 
                 <div class="relative group cursor-pointer overflow-hidden rounded-md">
-                    <img src="https://placehold.co/400x400/222222/a3e635?text=Product+7" alt="Product 7" class="w-full h-auto transition-transform transform group-hover:scale-105 rounded-md">
+                   <a href="https://otherworldsupplyco.printful.me/product/otherworld-supply-co-eco-tote-bag">
+                    <img src="totebag.jpg" alt="" class="w-full h-auto transition-transform transform group-hover:scale-105 rounded-md">
                     <div class="absolute inset-0 bg-black bg-opacity-50 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity">
                         <span class="text-white text-lg font-bold">View</span>
                     </div>
+                   </a>
                 </div>
 
                 <div class="relative group cursor-pointer overflow-hidden rounded-md">
-                    <img src="https://placehold.co/400x400/222222/a3e635?text=Product+2" alt="Product 2" class="w-full h-auto transition-transform transform group-hover:scale-105 rounded-md" style="filter: brightness(70%) sepia(100%)                     saturate(500%) hue-rotate(-20deg);">
+                    <img src="https://placehold.co/400x400/222222/a3e635?text=Product+8" alt="Product 8" class="w-full h-auto transition-transform transform group-hover:scale-105 rounded-md" style="filter: brightness(70%) sepia(100%)                     saturate(500%) hue-rotate(-20deg);">
                     <div class="absolute inset-0 flex items-center justify-center pointer-events-none">
                     <span class="text-white text-2xl font-bold drop-shadow-lg">SOLD $45.00</span>
                     </div>
