--- a/index.html
+++ b/index.html
@@ -141,13 +141,13 @@
         <section id="links" class="py-8 text-center">
             <h2 class="text-3xl md:text-4xl font-bold mb-4">Links</h2>
             <p class="text-gray-400"><a href="http://www.Facebook.com/OtherWorldSupplyCo">Facebook</a></p>
-            <p class="text-gray-400">This section is a placeholder for your important links.</p>
+            <p class="text-gray-400"></p>
         </section>
 
         <!-- Placeholder for "Contact" section -->
         <section id="contact" class="py-8 text-center">
             <h2 class="text-3xl md:text-4xl font-bold mb-4">Contact</h2>
-            <p class="text-gray-400">This section is a placeholder for your contact information or a form.</p>
+            <p class="text-gray-400">Please contact us on facebook for now. We are working on getting an email form up that will prevent bots from scraping our email address.</p>
         </section>
 
     </div>
