--- a/index.html
+++ b/index.html
@@ -128,9 +128,9 @@
                 </div>
 
                 <div class="relative group cursor-pointer overflow-hidden rounded-md">
-                    <img src="https://placehold.co/400x400/222222/a3e635?text=Product+8" alt="Product 8" class="w-full h-auto transition-transform transform group-hover:scale-105 rounded-md" style="filter: brightness(70%) sepia(100%)                     saturate(500%) hue-rotate(-20deg);">
+                    <img src="IMG_2164.JPG" alt="" class="w-full h-auto transition-transform transform group-hover:scale-105 rounded-md" style="filter: brightness(70%) sepia(100%)                     saturate(500%) hue-rotate(-20deg);">
                     <div class="absolute inset-0 flex items-center justify-center pointer-events-none">
-                    <span class="text-white text-2xl font-bold drop-shadow-lg">SOLD $45.00</span>
+                    <span class="text-red-500 text-2xl font-bold drop-shadow-lg">SOLD $45.00</span>
                     </div>
                 </div>
 
